--- a/src/apps/1688Web/components/m-app-list/index3.pug
+++ b/src/apps/1688Web/components/m-app-list/index3.pug
@@ -2,7 +2,7 @@
     .row
         .col-xs-3
             .abs-container.abs-hp-1of1
-                .abs-content.app-icon-box.touch-active.bg-blue
+                a.abs-content.app-icon-box.touch-active.bg-blue(href='m-tingche.html')
                     i.iconfont.icon-tingche
             .app-title 智慧停车
         .col-xs-3
