--- a/src/apps/1688Web/components/m-staff/personal-my-fs.pug
+++ b/src/apps/1688Web/components/m-staff/personal-my-fs.pug
@@ -2,8 +2,8 @@
     a.btn-content-switch(href="m-personal-notice.html") 我的通知
     a.btn-content-switch(href="m-personal-sys.html") 系统消息
     a.btn-content-switch(href="m-personal-message.html") 我的留言
-    .btn-content-switch.sel 我的缴费
-    a.btn-content-switch(href="m-personal-my-fs.html") 我的成长
+    a.btn-content-switch(href="m-personal-my-fee.html") 我的缴费
+    .btn-content-switch.sel 我的成长
     a.btn-content-switch(href="m-personal-fee-notice.html") 收费通知
     a.btn-content-switch(href="m-personal-estate.html") 物业申请
     a.btn-content-switch(href="m-personal-conf.html") 会展申请
