--- a/src/apps/1688Web/components/sidebar/index.pug
+++ b/src/apps/1688Web/components/sidebar/index.pug
@@ -15,7 +15,7 @@
     a.sidebar-btn.sbbtn-4(href="approval-hall.html") 
         i.fa.fa-bank
         |&nbsp;展厅申请
-    a.sidebar-btn.sbbtn-5(href="wip.html") 
+    a.sidebar-btn.sbbtn-5(href="tingche.html") 
         i.fa.fa-car
         |&nbsp;智慧停车
     a.sidebar-btn.sbbtn-6(href="org-appeal.html") 
