--- a/src/apps/1688Admin/webapp/oa-hr-leave-new-1.pug
+++ b/src/apps/1688Admin/webapp/oa-hr-leave-new-1.pug
@@ -44,8 +44,12 @@ block content
                             input.form-control(type='text')
                     .col-xs-12.col-sm-6
                         .form-group.cool-form-group.form-group-sm
-                            .cool-form-label.text-right.control-label 应休假天数：
+                            .cool-form-label.text-right.control-label 应休假时间：
                             input.form-control(type='text')
+                    .col-xs-12.col-sm-12
+                        .form-group.cool-form-group.form-group-sm
+                            .cool-form-label.text-right.control-label 剩余假时间：
+                            .cool-form-content 8天1小时30分
                     .col-xs-12.col-sm-4
                         .form-group.cool-form-group.form-group-sm
                             .cool-form-label.text-right.control-label 本次休假起始日：
@@ -62,7 +66,7 @@ block content
                                     i.fa.fa-calendar
                     .col-xs-12.col-sm-4
                         .form-group.cool-form-group.form-group-sm
-                            .cool-form-label.text-right.control-label 本次休假天数：
+                            .cool-form-label.text-right.control-label 本次休假时间：
                             .cool-form-content#leave_days
                     .col-xs-12
                         .form-group.cool-form-group.form-group-sm
@@ -128,6 +132,3 @@ block js
 
 
             
-
-
-
