--- a/src/apps/1688Web/components/m-staff/personal-message.pug
+++ b/src/apps/1688Web/components/m-staff/personal-message.pug
@@ -3,6 +3,7 @@
     a.btn-content-switch(href="m-personal-sys.html") 系统消息
     .btn-content-switch.sel 我的留言
     a.btn-content-switch(href="m-personal-my-fee.html") 我的缴费
+    a.btn-content-switch(href="m-personal-my-fs.html") 我的成长
     a.btn-content-switch(href="m-personal-fee-notice.html") 收费通知
     a.btn-content-switch(href="m-personal-estate.html") 物业申请
     a.btn-content-switch(href="m-personal-conf.html") 会展申请
