--- a/src/apps/1688Web/webapp/personal-my-fee.pug
+++ b/src/apps/1688Web/webapp/personal-my-fee.pug
@@ -35,6 +35,8 @@ block content
                                 li.active
                                     a(href="personal-my-fee.html") 我的缴费
                                 li
+                                    a(href="personal-my-fs.html") 我的成长
+                                li
                                     a(href="personal-fee-notice.html") 收费通知
                                 li
                                     a(href="personal-estate.html") 物业申请
