--- a/src/apps/1688Web/webapp/stylus/index.styl
+++ b/src/apps/1688Web/webapp/stylus/index.styl
@@ -110,6 +110,24 @@ body
     .block-gallery
         padding-bottom INDEX_SPACE_MOBILE
 
+.tingche-title
+    margin-top 0.2rem
+.tingche-num
+    width auto
+    display block
+    background-color WHITE
+    margin 0.04rem 0.16rem
+    background-color THEME_COLOR
+    color WHITE
+    border-radius 2rem
+    padding 0.08rem
+    padding-left 0.08rem + 0.4rem
+    font-size 0.32rem
+    text-align center
+    letter-spacing 0.4rem
+    &.last
+        background-color GREEN_GRASS
+
 
 
 .iscroller
@@ -223,4 +241,5 @@ for i in (1..10)
 @require '../../components/company-list/index'
 @require '../../components/resource-piclist/index'
 @require '../../components/chuangye/index'
+@require '../../components/footstep/index'
 @require 'ie9fix'
