--- a/src/apps/1688Web/webapp/stylus/btn.styl
+++ b/src/apps/1688Web/webapp/stylus/btn.styl
@@ -63,6 +63,7 @@
         border 1px solid GRAY_E3 !important
 
 .btn-hour
+.btn-day
     background-color GRAY_F0
     color GRAY_66
     &:hover
@@ -80,3 +81,46 @@
         color WHITE
         &.current
             background-color darken(GREEN_GRASS,20%)
+
+DAY_RANGE_SPACE = 0.04rem
+DAY_INNER_SPACE = 0.01rem
+.day-range-select
+    width 100%
+    float left
+    overflow hidden
+    .day-range-select-content
+        display block
+        overflow hidden
+        margin-left -0.5*DAY_RANGE_SPACE
+        margin-right -0.5*DAY_RANGE_SPACE
+    .day-range-box
+        width 14.2857%
+        float left
+        box-sizing border-box
+        padding 0 0.5*DAY_RANGE_SPACE
+        .day-range-title
+            width 100%
+            float left 
+            text-align center
+            padding 0.02rem
+            font-size 0.12rem
+            color GRAY_99
+        .day-range-box-left
+            float left
+            width 50%
+            box-sizing border-box
+            padding-right DAY_INNER_SPACE
+            .btn-day
+                border-radius 0.04rem
+                border-top-right-radius 0
+                border-bottom-right-radius 0
+        .day-range-box-right
+            float left
+            width 50%
+            box-sizing border-box
+            padding-left DAY_INNER_SPACE
+            .btn-day
+                border-radius 0.04rem
+                border-top-left-radius 0
+                border-bottom-left-radius 0
+        
