--- a/src/apps/1688Web/webapp/stylus/btn.styl
+++ b/src/apps/1688Web/webapp/stylus/btn.styl
@@ -81,6 +81,8 @@
         color WHITE
         &.current
             background-color darken(GREEN_GRASS,20%)
+.btn-day
+    padding 0.05rem 0.12rem
 
 DAY_RANGE_SPACE = 0.04rem
 DAY_INNER_SPACE = 0.01rem
