--- a/src/apps/1688Web/webapp/approval-meetingroom.pug
+++ b/src/apps/1688Web/webapp/approval-meetingroom.pug
@@ -101,21 +101,27 @@ block content
                                     .btn.btn-day.btn-block#end_pm 下午
                                 .col-xs-12
                                     .form-group.cool-form-group.form-group-sm
-                                        .cool-form-label.text-right.control-label 展厅时间段：
+                                        .cool-form-label.text-right.control-label 会议时长：
                                         .cool-form-content#time_range_label  请选择开始和结束时间
+                                .col-xs-12
+                                    .form-group.cool-form-group.form-group-sm
+                                        .cool-form-label.text-right.control-label 会议室费用：
+                                        .input-group
+                                            input.form-control#room_fee(type="text" value="0" disabled)
+                                            .input-group-addon 元
                                 .col-xs-12
                                     .box-form.has-title.bg-white
                                         .box-form-title.bg-white 增值服务
                                         .row.no-bottom#add_value_content
                                 .col-xs-12
                                     .form-group.cool-form-group.form-group-sm
-                                        .cool-form-label.text-right.control-label 展厅价格：
+                                        .cool-form-label.text-right.control-label 增值服务价格：
                                         .input-group
-                                            input.form-control#price(type="text" value="100" disabled)
+                                            input.form-control#price(type="text" value="0" disabled)
                                             .input-group-addon 元/时
                                 .col-xs-12
                                     .form-group.cool-form-group.form-group-sm
-                                        .cool-form-label.text-right.control-label 展厅费用：
+                                        .cool-form-label.text-right.control-label 总费用：
                                         .input-group
                                             input.form-control#fee(type="text" value="0" disabled)
                                             .input-group-addon 元
